[tool.poetry]
name = "ms-python-client"
version = "1.0.1"
exclude = ["tests*", "example*", ".github*", ".git*", ".vscode*"]
description = "This package is used to interact with the microsoft graph API"
authors = ["Samuel Guillemet <samuel.guillemet@telecom-sudparis.eu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ms_python_client"}]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.21.0"
typing_extensions = "^4.3.0"
msal = "^1.22.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
black = "23.3.0"
flake8 = "6.0.0"
isort = "5.10.1"
pre-commit = "2.15.0"
mypy = "1.2.0"
mypy-extensions = "1.0.0"
pylint = "2.17.4"
pytest = "7.1.3"
pytest-cov = "3.0.0"
responses = "0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/SamuelGuillemet/ms-python-client/issues"

[tool.isort]
profile = "black"

[tool.mypy]
no_strict_optional = true
ignore_missing_imports = true
files = "^(ms_python_client/|tests/)"